# immersive-tarot-ai

./: .gitignore  Dockerfile.rust-mcp  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260115_0001_initial.sql  20260117_0002_conversation.sql
backend/src/: ai_service.rs  db.rs  handlers.rs  main.rs  models.rs  state.rs  tarot_engine.rs  ws_handler.rs
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  FRONTEND.md  selection_logic.md  system_prompts.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: tarot_data.json
frontend/src/: App.svelte  stores.ts
frontend/src/components/: CardDeck.svelte  Hand.svelte  Scene.svelte  Table.svelte  UI.svelte
frontend/src/lib/: cardTextures.ts  shuffleController.ts  websocket.ts
playwright-report/: index.html
test-results/: .last-run.json
tests/: tarot.spec.ts
